--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -92,6 +92,7 @@
                 <div class="col-sm-3 col-lg-2 page__sidebar">
 
                     <div style="position: relative;" >
+
                         {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
                         <a class="banner banner--light banner--sidebar" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
 
@@ -106,78 +107,83 @@
                         </a>
                         {% endif %}
 
-                        <ul class="nav-tree nav-tree--level-{{ branch_level }}" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
-                            <li class="nav-tree__item">
-                                <a class="nav-tree__link active" href="{% url 'event_list' %}">
-                                    {% if tag and tag|tag_is_excluded %}
-                                        {% trans "Tournées" %}
-                                    {% elif is_archive %}
-                                        {% trans 'Archives' %}
-                                    {% else %}
-                                        {% trans "Rendez-vous" %}
-                                    {% endif %}
-                                </a>
+                        <div class="nav-tree-wrapper" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
 
-                                <ul class="nav-tree" data-summary>
-                                    <li class="nav-tree__item nav-tree__item--sub hide">
-                                        <a class="nav-tree__link nav-tree__link--sub" href="#"></a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            {% if is_archive %}
+                            <ul class="nav-tree nav-tree--level-{{ branch_level }}">
                                 <li class="nav-tree__item">
-                                    <a class="nav-tree__link" href="{% url 'event_list' %}">
-                                        {% trans "Rendez-vous" %}
-                                    </a>
-                                </li>
-                            {% endif %}
-
-                            {% if tag and tag|tag_is_excluded %}
-                                <li class="nav-tree__item">
-                                    <a class="nav-tree__link" href="{% url 'event_list' %}">
-                                        {% trans "Rendez-vous" %}
-                                    </a>
-                                </li>
-                            {% else %}
-                                <li class="nav-tree__item">
-                                    <a class="nav-tree__link" href="{% url 'event_list_tag' 'tournees' %}">
-                                        {% trans "Tournées" %}
-                                    </a>
-                                </li>
-                            {% endif %}
-
-                            {% if not is_archive %}
-                                <li class="nav-tree__item">
-                                    <a class="nav-tree__link" href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'Archives' %}</a>
-                                </li>
-                            {% endif %}
-
-                            {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
-
-                                <li class="nav-tree__separator">
-
-                                </li>
-
-                                {% keywords_for mezzanine_agenda.event as tags %}
-                                {# {% all_events as all_events %}#}
-                                {% if tags %}
-                                    {% comment %}
-                                        <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %}</a>
-                                    {% endcomment %}
-                                    {% for t in tags %}
-                                        {% if not t|tag_is_excluded %}
-                                            <li class="nav-tree__item">
-                                                <a class="nav-tree__link--filter nav-tree__link{% if tag == t %} active{% endif %}" href="{% if tag == t %}{% url 'event_list' %}{% else %}{% url "event_list_tag" t.slug %}{% endif %}">
-                                                    {{ t }} {% if tag == t %}<i class="fa fa-times"></i>{% endif %}
-                                                </a>
-                                            </li>
+                                    <a class="nav-tree__link active" href="{% url 'event_list' %}">
+                                        {% if tag and tag|tag_is_excluded %}
+                                            {% trans "Tournées" %}
+                                        {% elif is_archive %}
+                                            {% trans 'Archives' %}
+                                        {% else %}
+                                            {% trans "Rendez-vous" %}
                                         {% endif %}
-                                    {% endfor %}
+                                    </a>
+
+                                    <ul class="nav-tree" data-summary>
+                                        <li class="nav-tree__item nav-tree__item--sub hide">
+                                            <a class="nav-tree__link nav-tree__link--sub" href="#"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                {% if is_archive %}
+                                    <li class="nav-tree__item">
+                                        <a class="nav-tree__link" href="{% url 'event_list' %}">
+                                            {% trans "Rendez-vous" %}
+                                        </a>
+                                    </li>
                                 {% endif %}
 
-                            {% endif %}
-                        </ul>
+                                {% if tag and tag|tag_is_excluded %}
+                                    <li class="nav-tree__item">
+                                        <a class="nav-tree__link" href="{% url 'event_list' %}">
+                                            {% trans "Rendez-vous" %}
+                                        </a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-tree__item">
+                                        <a class="nav-tree__link" href="{% url 'event_list_tag' 'tournees' %}">
+                                            {% trans "Tournées" %}
+                                        </a>
+                                    </li>
+                                {% endif %}
+
+                                {% if not is_archive %}
+                                    <li class="nav-tree__item">
+                                        <a class="nav-tree__link" href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'Archives' %}</a>
+                                    </li>
+                                {% endif %}
+
+                                </ul>
+
+                                {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
+
+                                    <ul class="nav-tree nav-tree--level-{{ branch_level }}">
+
+                                    {% keywords_for mezzanine_agenda.event as tags %}
+                                    {# {% all_events as all_events %}#}
+                                    {% if tags %}
+                                        {% comment %}
+                                            <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %}</a>
+                                        {% endcomment %}
+                                        {% for t in tags %}
+                                            {% if not t|tag_is_excluded %}
+                                                <li class="nav-tree__item">
+                                                    <a class="nav-tree__link--filter nav-tree__link{% if tag == t %} active{% endif %}" href="{% if tag == t %}{% url 'event_list' %}{% else %}{% url "event_list_tag" t.slug %}{% endif %}">
+                                                        {{ t }} {% if tag == t %}<i class="fa fa-times"></i>{% endif %}
+                                                    </a>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+
+                                    </ul>
+
+                                {% endif %}
+
+                        </div>
 
                     </div>
                 </div>
