--- a/templates/media/inc/playlist_audio_detail.html
+++ b/templates/media/inc/playlist_audio_detail.html
@@ -1,5 +1,9 @@
 {% load mezzanine_tags keyword_tags i18n organization_tags %}
 
+<p>
+    {{playlist.description}}
+</p>
+
 <audio preload="true"></audio>
 
 <ol class="audio-playlist">
