--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -123,6 +123,9 @@
             {% block products %}
             {% endblock %}
 
+            {% block page_sub_content_2 %}
+            {% endblock %}
+
             {% block logo %}
             {% endblock %}
 
