--- a/app/templates/pages/teampage.html
+++ b/app/templates/pages/teampage.html
@@ -77,7 +77,7 @@
 {% endblock %}
 
 {% block page_sub_content %}
-    {% with object.blocks.all|slice:'1' as blocks %}
+    {% with page.teampage.blocks.all|slice:'1' as blocks %}
         {% include "core/inc/block.html" %}
     {% endwith %}
 {% endblock %}
@@ -112,7 +112,7 @@
 {% endblock %}
 
 {% block page_sub_content_2 %}
-    {% with object.blocks.all|slice:'2:' as blocks %}
+    {% with page.teampage.blocks.all|slice:'2:' as blocks %}
         {% include "core/inc/block.html" %}
     {% endwith %}
 {% endblock %}
