--- a/templates/pages/menus/header_tree_primary.html
+++ b/templates/pages/menus/header_tree_primary.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    {{ page.departmentpage.description|richtext_filters|safe }}
+                    {{ page.departmentpage.description|richtext_filters|safe|truncatechars:415 }}
                 </p>
             </div>
         </div>
