--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -70,7 +70,7 @@
     {% if page.departmentpage.department.articles.all %}
         <div class="white-bg pb2">
             <div class="page__block">
-                <hr />
+                <hr class="mt0" />
                 <div class="container">
                     <div class="row tac">
                         <div class="col-xs-12">
