--- a/templates/magazine/article/includes/article_card.html
+++ b/templates/magazine/article/includes/article_card.html
@@ -45,7 +45,7 @@
             {% trans 'News' %}
         </div>
         {% if article.department %}
-            <div class="tag tag--small dashed dashed--gray">
+            <div class="tag tag--small dashed dashed--gray dashed--small">
               {{ article.department.name }}
             </div>
         {% endif %}
