--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -65,7 +65,7 @@
 
             <div class="row">
 
-                <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
+                <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
 
                     <h1 class="dotted">
                         {% if page %}
@@ -188,9 +188,9 @@
                     </div>
                 </div>
 
-                <div class="mb2 col-sm-9 col-lg-10 white-bg page__content" data-summary-content>
+                <div class="mb2 col-sm-9 col-lg-10 page__content" data-summary-content>
 
-                    <div class="white-bg page__content">
+                    <div class="page__content">
                         <div class="container">
 
                             {% for event in events.object_list %}
