--- a/app/static/src/sass/modules/boxes/_search-box.scss
+++ b/app/static/src/sass/modules/boxes/_search-box.scss
@@ -3,6 +3,7 @@ $module: ".search-box";
 #{$module} {
 
     position: relative;
+    @include clearfix;
     @include margin-bottom(2);
 
     &__title {
@@ -36,6 +37,101 @@ $module: ".search-box";
         @include line-height(1);
         @include typeface(serif);
         font-weight: weight(light);
+
+    }
+
+    &__image-wrapper {
+
+        float: left;
+        width: 20%;
+        display: block;
+
+        & + #{$module}__right {
+
+            width: 80%;
+            float: left;
+            @include padding-left(1);
+
+        }
+
+        @include mq($until: xs) {
+            display: none;
+
+            & + #{$module}__right {
+
+                width: 100%;
+                float: none;
+                @include padding-left(0);
+
+            }
+        }
+
+    }
+
+    &__image {
+
+        @include fluid-aspect(720 435);
+
+        &--playlist {
+
+            @include fluid-aspect(720 435);
+
+        }
+
+        &--video {
+
+            &:after {
+                font-family: FontAwesome;
+                display: block;
+                content: "\f04b";
+                background: white;
+                width: 50px;
+                height: 50px;
+                border-radius: 50px;
+
+                font-size: 25px;
+
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin-top: -25px;
+                margin-left: -25px;
+
+                line-height: 50px;
+                text-align: center;
+                text-indent: 3px;
+
+            }
+
+        }
+
+        &--audio {
+
+            &:after {
+                font-family: FontAwesome;
+                display: block;
+                content: "\f028";
+                text-indent: 0px;
+                background: white;
+                width: 50px;
+                height: 50px;
+                border-radius: 50px;
+
+                font-size: 25px;
+
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin-top: -25px;
+                margin-left: -25px;
+
+                line-height: 50px;
+                text-align: center;
+                text-indent: 3px;
+
+            }
+
+        }
 
     }
 
