--- a/app/templates/core/inc/block.html
+++ b/app/templates/core/inc/block.html
@@ -13,14 +13,20 @@
                     <div class="container">
                         <div class="row" data-summary-content>
                             <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-                                <h2 class="dotted">{{ block.title }}</h2>
+                                {% editable block.title %}
+                                    <h2 class="dotted">{{ block.title }}</h2>
+                                {% endeditable %}
                                 {% if block.description %}
                                     <div class="chapo">
-                                        {{ block.description }}
+                                        {% editable block.description %}
+                                            {{ block.description }}
+                                        {% endeditable %}
                                     </div>
                                 {% endif %}
                                 {% if block.content %}
-                                     {{ block.content|richtext_filters|safe }}
+                                    {% editable block.content %}
+                                        {{ block.content|richtext_filters|safe }}
+                                    {% endeditable %}
                                 {% endif %}
                             </div>
                         </div>
