--- a/app/templates/core/inc/link.html
+++ b/app/templates/core/inc/link.html
@@ -1,6 +1,6 @@
 {% load mezzanine_tags i18n %}
 <ul class="unstyled-list fss">
     {% for link in links %}
-      <li><a href="{{ link.url }}" title=""><i class="fa fa-{{ link.link_type.name }}" target="_blank"></i> {% firstof link.title link.url%}</a></li>
+      <li><a href="{{ link.url }}" title="{{ link.link_type.name }}"  target="_blank"><i class="fa fa-{{ link.link_type.name }}"></i> {% firstof link.title link.url%}</a></li>
     {% endfor %}
 </ul>
