--- a/app/templates/job/inc/candidacy_card.html
+++ b/app/templates/job/inc/candidacy_card.html
@@ -12,18 +12,24 @@
 
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+            {% editable content.title %}
+                <h2 class="job-line-box__title">{{ content.title }}</h2>
+            {% endeditable %}
 
-            <h2 class="job-line-box__title">{{ content.title }}</h2>
             <div class="job-line-box__desc">
-                {% if content.date_from and content.date_to %}
-                    <strong>{% trans "From" %}&nbsp;{{ content.date_from|date:"DATE_FORMAT" }}&nbsp;{% trans "to" %}&nbsp;{{ content.date_to|date:"DATE_FORMAT" }}</strong><br/>
-                {% elif content.date_from %}
-                    <strong>{% trans "From" %}&nbsp;{{ content.date_from|date:"DATE_FORMAT" }}</strong><br/>
-                {% elif content.date_to %}
-                    <strong>{% trans "until" %}{{ content.date_to|date:"DATE_FORMAT" }}</strong><br/>
-                {% endif %}
+                {% editable content.date_from content.date_to %}
+                    {% if content.date_from and content.date_to %}
+                        <strong>{% trans "From" %}&nbsp;{{ content.date_from|date:"DATE_FORMAT" }}&nbsp;{% trans "to" %}&nbsp;{{ content.date_to|date:"DATE_FORMAT" }}</strong><br/>
+                    {% elif content.date_from %}
+                        <strong>{% trans "From" %}&nbsp;{{ content.date_from|date:"DATE_FORMAT" }}</strong><br/>
+                    {% elif content.date_to %}
+                        <strong>{% trans "until" %}{{ content.date_to|date:"DATE_FORMAT" }}</strong><br/>
+                    {% endif %}
+                {% endeditable %}
                 <br />
-                {{ content.description }}
+                {% editable content.description %}
+                    {{ content.description }}
+                {% endeditable %}
             </div>
             {% if content.external_content and content.text_button_external %}
                 <a class="button button--small" href="{{ content.external_content }}" title="{{ content.text_button_external }}">{{ content.text_button_external }}</a>
