--- a/app/templates/job/inc/job_offer_card.html
+++ b/app/templates/job/inc/job_offer_card.html
@@ -2,13 +2,21 @@
 <div class="job-line-box">
     {% if jo.type %}
         <div class="tag tag--small tag--category">
-            {{jo.type}}
+            {% editable jo.type %}
+                {{jo.type}}
+            {% endeditable %}
         </div>
     {% endif %}
-    <a href="{{ jo.get_absolute_url }}"><h2 class="job-line-box__title">{{ jo.title }}</h2></a>
+    <a href="{{ jo.get_absolute_url }}">
+        <h2 class="job-line-box__title">
+            {{ jo.title }}
+        </h2>
+    </a>
     <div class="job-line-box__desc">
-        <strong>{{ jo.publish_date|date:"DATE_FORMAT" }}</strong><br />
-        {{ jo.description|slice:":255" }}
+        <strong>{% trans 'Published on' %} {{ jo.publish_date|date:"DATE_FORMAT" }}</strong><br />
+        {% editable jo.description %}
+            {{ jo.description|slice:":255" }}
+        {% endeditable %}
     </div>
     <a href="{{ jo.get_absolute_url }}" class="button button--small">{% trans "View" %}</a>
 </div>
