Update banners style and layout on homepage

--- a/app/static/src/sass/modules/_banner.scss
+++ b/app/static/src/sass/modules/_banner.scss
@@ -20,6 +20,12 @@ $module: ".banner";
 
     @include mq($until: sm) {
 
+        height: 250px;
+
+    }
+
+    @include mq($until: xs) {
+
         height: auto;
 
     }
