--- a/app/static/src/sass/pages/_home.scss
+++ b/app/static/src/sass/pages/_home.scss
@@ -8,6 +8,10 @@ $module: ".home";
         margin-top: -($header-height + $header-pre-height);
         padding-top: 0;
 
+        @include mq($until: sm) {
+            margin-top: 0;
+        }
+
     }
 
     &__menu {
@@ -196,4 +200,28 @@ $module: ".home";
 
     }
 
+}
+
+.home-mobile-nav {
+    display: none;
+
+    background: $color-main;
+    border-top: 1px solid $color-black;
+
+    @include mq($until: sm) {
+        display: block;
+    }
+
+    @include mq($until: xs) {
+        @include margin-bottom(1);
+    }
+}
+
+.home-mobile-subnav {
+    display: none;
+
+    @include mq($until: xs) {
+        display: block;
+        @include margin(0 0 1 0);
+    }
 }
