Fix the pattern on cards without image

--- a/app/templates/agenda/includes/event_card.html
+++ b/app/templates/agenda/includes/event_card.html
@@ -23,7 +23,7 @@
             <figure class="article-box__image">
                 {% if event.departments.first %}
                     {% with event.departments.first as department %}
-                        <div class="article-box__placeholder {{department.department.name|lower}}"></div>
+                        <div class="article-box__placeholder {{department.department.name|slugify}}"></div>
                     {% endwith %}
                 {% else %}
                     <div class="article-box__placeholder"></div>
