Task #334: Article related content

--- a/app/templates/core/inc/related_content.html
+++ b/app/templates/core/inc/related_content.html
@@ -1,5 +1,5 @@
 {% load i18n mezzanine_tags keyword_tags organization_tags pages_tags %}
-{% if dynamic_content.all %}
+{% if dynamic_content %}
     <hr class="mt0 mb0" />
     <div class="white-bg pb2">
         <div class="container">
