--- a/app/templates/magazine/article/article_detail.html
+++ b/app/templates/magazine/article/article_detail.html
@@ -93,7 +93,7 @@
 {% endblock %}
 
 {% block page_related_content %}
-    {% with article.dynamic_content_articles.all as dynamic_content %}
+    {% with dynamic_content=article.dynamic_content_articles.all object=article %}
         {% include "core/inc/related_content.html" %}
     {% endwith %}
 {% endblock %}
