Add a new link style to the wysiwyg editor

--- a/app/static/src/sass/global/_wysiwyg.scss
+++ b/app/static/src/sass/global/_wysiwyg.scss
@@ -162,3 +162,12 @@
     @extend .small-text;
 
 }
+
+.wys-unstyled-link {
+
+    border-bottom: 0 !important;
+    &:hover {
+        box-shadow: none !important;
+    }
+
+}
