--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -94,7 +94,7 @@
                     <div style="position: relative;" >
 
                         {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
-                        <a class="banner banner--light banner--sidebar" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
+                        <a class="banner banner--light banner--sidebar hide-until-sm" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
 
                             <div class="banner__content">
 
@@ -196,6 +196,20 @@
                             {% for event in events.object_list %}
                                 {% include 'agenda/includes/event_linecard.html' %}
                             {% endfor %}
+
+                            {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
+                            <a class="banner banner--light banner--sidebar hide-from-sm" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
+
+                                <div class="banner__content">
+
+                                    <div class="banner__title fsxxxl">
+                                        Tournées {{ CURRENT_SEASON_STYLED }}
+                                    </div>
+
+                                </div>
+
+                            </a>
+                            {% endif %}
 
                         </div>
                     </div>
